# transcribe-KIT

./: README.md  convert_transcription.py  pyproject.toml
src/transcribe_kit/: __init__.py  check_status.py  config.py  convert.py  monitor_job.py  transcribe.py
