[project]
name = "transcribe-KIT"
version = "0.1.0"
description = "CLI tool for transcribing audio files using KIT's diarization API"
readme = "README.md"
authors = [
    { name = "joris", email = "uvmmr@student.kit.edu" }
]
requires-python = ">=3.13"
dependencies = [
    "requests>=2.31.0",
    "rich>=13.7.0",
]

[project.scripts]
transcribe = "transcribe_kit.transcribe:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
